css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap');

* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
	color: #fff;
}

:root {
	touch-action: pan-x pan-y;
	height: 100% 
}

body {
	font-family: "Nunito", sans-serif;
	overflow: hidden;
	background-color: #37acc3;
}


.container {
	width: 100vw;
	height: 100vh;
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	grid-gap: 7rem;
	padding: 0 2rem;
}

.img {
	display: flex;
	justify-content: flex-end;
	align-items: center;
}

.login-content {
	display: flex;
	justify-content: flex-start;
	align-items: center;
	text-align: center;
	padding: 2rem;
}

form {
	width: 360px;
}

.login-content img {
	height: 100px;
}

.login-content .logo {
	margin-bottom: 2rem;
}

.input-field {
	max-width: 500px;
	width: 100%;
	background-color: transparent;
	border: 2px solid #ffffff;
	margin: 18px 0;
	height: 55px;
	border-radius: 55px;
	display: grid;
	grid-template-columns: 15% 85%;
	padding: 0 0.4rem;
	position: relative;
	-webkit-transition: .4s;
	transition: .4s;
}

.input-field:focus-within {
	border: 2px solid #F4A517;
}

.input-field:focus-within input::placeholder {
	color: #F4A517;
}

.input-field i {
	text-align: center;
	line-height: 55px;
	color: #84CEE4;
	font-size: 1.1rem;
	-webkit-transition: .4s;
	transition: .4s;
}

.input-field:focus-within i{
	color: #F4A517;
}

.input-field input {
	background: none;
	outline: none;
	border: none;
	line-height: 1;
	font-size: 1.1rem;
	color: #fff;
	font-family: "Nunito";
	font-weight: 600;
	-webkit-transition: .5s;
	transition: .5s;
}

.input-field input::placeholder {
	color: #fff;
	font-family: "Nunito";
	font-weight: 600;
}


.i {
	color: #d9d9d9;
	display: flex;
	justify-content: center;
	align-items: center;
}

.i i {
	transition: .3s;
}

.input-div>div {
	position: relative;
	height: 45px;
}

.input-div>div>h5 {
	position: absolute;
	left: 10px;
	top: 50%;
	transform: translateY(-50%);
	color: #fff;
	font-size: 18px;
	transition: .3s;
}

.input-div:before,
.input-div:after {
	content: '';
	position: absolute;
	bottom: -2px;
	width: 0%;
	height: 2px;
	background-color: #F4A517;
	transition: .4s;
}

.input-div:before {
	right: 50%;
}

.input-div:after {
	left: 50%;
}

.input-div.focus:before,
.input-div.focus:after {
	width: 50%;
}

.input-div.focus>div>h5 {
	top: -5px;
	font-size: 15px;
}

.input-div.focus>.i>i {
	color: #F4A517;
}

.input-div>div>input {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	border: none;
	outline: none;
	background: none;
	padding: 0.5rem 0.7rem;
	font-size: 1.2rem;
	color: #555;
}

.lost-password {
	margin: 1rem 0;
	display: block;
	text-align: center;
	text-decoration: none;
	font-size: 1rem;
	transition: .5s;
}

.lost-password:hover {
	text-decoration: underline;
}

.btn {
	display: block;
	width: 100%;
	height: 50px;
	margin: 10px 0;
	border-radius: 25px;
	outline: none;
	border: none;
	background-size: 200%;
	font-family: "Nunito";
	font-size: 1.2rem;
	background-image: linear-gradient(to right, #D9910A, #F4A517, #D9910A);
	color: #fff;
	margin: 1rem 0;
	cursor: pointer;
	transition: .4s;
}

.btn:hover {
	background-position: right;
}


@media screen and (max-width: 1050px) {
	.container {
		grid-gap: 5rem;
	}
}

@media screen and (max-width: 1000px) {
	form {
		width: 400px;
	}

	.login-content h2 {
		font-size: 2.4rem;
		margin: 8px 0;
	}

	.img img {
		width: 400px;
	}
}

@media screen and (max-width: 900px) {
	.container {
		/* grid-template-columns: 1fr; */
		display: inline-block;
	}

	.img {
		display: none;
	}

	.login-content {
		justify-content: center;
	}

	.login-content .logo {
		width: 15rem;
		text-align: center;
	}
}

